Updated the unmodifiable snapshot